--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,9 @@
 autopep8==1.6.0
+minimalmodbus==2.0.1
 pep8==1.7.1
 pycodestyle==2.8.0
 PyQt5==5.15.6
 PyQt5-Qt5==5.15.2
 PyQt5-sip==12.9.1
+pyserial==3.5
 toml==0.10.2
